done. I need to fix the image source; global -->local

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--HEADER SECTION -->
     <header>
       <div class="logo">
-        <img src="resources\img-myt-logo.jpg" alt="logo">
+        <img src="resources\images\img-myt-logo.jpg" alt="logo">
         <h2>My Times</h2>
       </div>
       <nav class="nav-items">
@@ -24,55 +24,117 @@
     <div class="container">
       <!--LEFT COLUMN -->
       <div class="left-column">
-        <div >
+        <div class="main-story-header image-text" id="main-story-header">
+        <!--<img src="resources\images\main-story-img.png" alt="logo" />-->
           <p>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</p>
         </div>
 
-        <div
-          <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
-            Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac <br>
-            eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum <br>
-            vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi <br>
-            porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa <br>
-            rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui <br>
-            lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed <br>
-            ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis <br>
-            neque. Nullam sit amet fringilla massa.<br>
+        <div class="story-text">
+          <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac
+            eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum
+            vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi
+            porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa
+            rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui
+            lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed
+            ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis
+            neque. Nullam sit amet fringilla massa.
           </p>
         </div>
+        <div class="left-col-lower">
 
-        <div class="">
-          <h3>Orca Spends Vacation at Land World Puget</h3>
-          <p>
-            PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio <br>
-            vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...
-          </p>
+
+        <div class="left-col-lower-one">
+          <div class="">
+            <h3>Orca Spends Vacation at Land World Puget</h3>
+            <p class="story-text">
+              PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio
+              vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...
+            </p>
+          </div>
+          <div class="fall">
+            <P class="image-text">Earth Spins Backwards for 2017</P>
+          </div>
+
         </div>
 
-        <div class="">
-          <p>Earth Spins Backwards for 2017</p>
-        </div>
 
-        <div class="">
-          <h3>Burger for Breakfast: How Early is too Early?</h3>
-          <p>
-            Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. <br>
-            Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.
-          </p>
-        </div>
+        <div class="left-col-lower-two">
+          <div class="">
+            <h3>Burger for Breakfast: How Early is too Early?</h3>
+            <p class="story-text">
+              Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus.
+              Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.
+            </p>
+          </div>
 
-        <div class="">
-          <p>Research Shows Cameras Erase Memory</p>
+          <div class="cameraman">
+            <p class="image-text">Research Shows Cameras Erase Memory</p>
+          </div>
+        </div>
         </div>
 
       </div>
       <!--MID COLUMN -->
       <div class="mid-column">
+        <div class="">
+          <h3>FBI Finds Action Star Guilty of False Advertising</h3>
+          <p class="story-text">
+            WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed.Nam vitae aliquam lectus. Sed tempor
+            tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin
+            turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris,
+            placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante
+             sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam
+             felis...
+          </p>
+        </div>
+
+        <div class="cat">
+          <p class="image-text">Cats in Control-Is It a Thing?</p>
+        </div>
+
+        <div>
+          <p class="story-text">
+          BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc
+           nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque
+           sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim
+           lacinia dolor, quis commodo tellus pellentesque in.
+           </p>
+        </div>
 
       </div>
       <!--RIGHT COLUMN -->
       <div class="right-column">
+        <img src="resources\images\cookie-bite.png" alt="cookie with a bite mark">
 
+        <div class="bites">
+          <h3 class="bites-title">NEWS BITES</h3>
+          <span>Cat Emoji Goes Viral</span>
+          <span>Buy Youtube Videos</span>
+          <span>Home Business Advertising Ideas</span>
+          <span>Advertising Internet Online</span>
+          <span>Illustration in Marketing Materials</span>
+          <span>Finally a Top Secret Way You Can</span>
+        </div>
+
+      </div>
+
+
+    </div>
+    <!-- FOOTER -->
+    <div class="footer">
+      <div class="footer-logo">
+         <h3>My Times  |</h3>
+         <nav>
+           <span><a href="#">World</a></span>
+           <span><a href="#">U.S</a></span>
+           <span><a href="#">Tech</a></span>
+           <span><a href="#">Science</a></span>
+         </nav>
+
+       </div>
+      <div class="copyright">
+        <p>© 2016, My Times (A Division of Codecademy bite)</p>
       </div>
 
     </div>
